--- a/.env
+++ b/.env
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=q7cxv1zwcdlw7699.chr7pe7iynqr.eu-west-1.rds.amazonaws.com
+DB_HOST=lolyz0ok3stvj6f0.cbetxkdyhwsb.us-east-1.rds.amazonaws.com
 DB_PORT=3306
-DB_DATABASE=zltc7e851un3jtyi
-DB_USERNAME=aymzg80n3v2wnxfr
-DB_PASSWORD=sl565v40d2z72qbv
+DB_DATABASE=xa8162jzwm4yylbr
+DB_USERNAME=z2vi5ctjd3uvlo2u
+DB_PASSWORD=arxhzqm4yxgmr1ia
 
 CLOUDINARY_URL=cloudinary://848853521418299:zEFBdLfZq6pKz58ORwfpki6rcCA@dwdh27oac
 CLOUDINARY_UPLOAD_PRESET=
